--- a/jade/index.jade
+++ b/jade/index.jade
@@ -5,10 +5,10 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(name="description",
-      content="The unofficial campaign manager for the BattleTech boardgame."
+      content="The unofficial campaign manager for BattleTech, a MechWarrior's best friend.
     )
     meta(name="keywords",
-      content="BattleTech, campaign, RPG, mek, board game, freebirth scum"
+      content="BattleTech, MechWarrior, campaign, RPG, mek, board game, freebirth scum"
     )
     link(rel="stylesheet", href="vendor/css/vendor.min.css")
     link(rel="stylesheet", href="assets/css/main.css")
@@ -24,26 +24,25 @@ html(lang="en")
         li
           b What is MekManager?
         li.
-          MekManager will be a web application for managing BattleTech
-          campaigns and RPG characters.
+          MekManager will be a web application for managing BattleTech campaigns and
+          RPG characters.
         li
           b How is it different than MegaMek, or MekHQ?
         li.
-          MekManager actually draws heavily from MegaMek, but has a different
-          direction and goals. MekManager strives to use the most
-          up to date rules for BattleTech, in hopes of making BattleTech easier
-          to get into for new players, and grow the community. Secondly
+          MekManager actually draws heavily from MegaMek, but has a different direction and goals.
+          MekManager strives to use the most up to date rules for BattleTech, in hopes of making
+          BattleTech easier to get into for new players, and grow the community.
         li
           b How will MekManager work?
         li.
-          Unlike MegaMek, MekManager does not run on your local machine,
-          instead MekManager is a hosted web application. This means that you
-          will be able to use MekManager from any device, and access your
-          campaign.
+          Unlike MegaMek, MekManager does not run on your local machine, instead MekManager is a
+          hosted web application. This means that you will be able to use MekManager from any
+          device, and access your campaign.
       p.
-        Please note that MekManager is still in <b>very</b> early production,
-        and will be for a while. If you'd like to help with the project in any
-        way, you can find a link to the source code in the footer.
+        Please note that MekManager is still in <b>very</b> early production, and will be for a
+        while. If you'd like to help with the project in any way, you can find a link to the
+        source code in the footer.
+
     footer
       p MekManager is open source, you can view the source for this site&nbsp;
         a(href="https://github.com/MekManager/mekmanager_client",
