--- a/assets/sass/_defaults.sass
+++ b/assets/sass/_defaults.sass
@@ -3,10 +3,16 @@ body
   margin: 0
   padding: 0
   height: 100%
+  background: grey
+  background-image: url('../img/irongrip.png')
 
 main
   position: relative
   min-height: 100%
+  background: $white
+
+header
+  background: $white
 
 footer
   bottom: 0
