add privacy policy, fathers day note

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,11 +8,29 @@ img
     display: block
     margin: 0 auto
 
+  &.fathers-day
+    max-width: 451px
+    max-height: 400px
+    width: 100%
+    height: 100%
+    display: block
+    margin: 0 auto
+
 ul
   margin-bottom: 45px
 
 h1
   text-align: center
+
+h2
+  &.center
+    text-align: center
+
+p
+  &.center
+    width: 80%
+    margin: 0 auto
+    text-align: center
 
 footer
   background: $footer_grey
@@ -20,4 +38,4 @@ footer
   text-align: center
   color: $white
   p
-    padding-top: 20px
+    padding-top: 10px
