re-organize for site beta
closes #1

This is a bulk commit which accomplishes several things
- separate compiled directories from source directories
- set new, pythonic linting rules for coffeescript
- re-write coffeescript in line with new rules
- clean up gulpfile
- typo fixes

--- a/assets/jade/about.jade
+++ b/assets/jade/about.jade
@@ -20,7 +20,7 @@ ul
     campaign rulesand focus on the fun, playing BattleTech!
   li.
     <b>Persistant:</b> No longer worry about having your campaign data stored on some save file on
-    your computer. And stop keeing it all in excel spreadsheets and old notebooks, MekManager
+    your computer. And stop keeping it all in excel spreadsheets and old notebooks, MekManager
     will track it for you.
   li.
     <b>RPG Support:</b> A full character creator is planned. This has been one of the most elusive
