--- a/assets/jade/about.jade
+++ b/assets/jade/about.jade
@@ -7,6 +7,27 @@ p.
   started MekManager with the intention to make the best possible online utility for the BattleTech
   community.
 
+h4 What is Mekmanager?
+
+ul
+  li
+    b What is MekManager?
+  li.
+    MekManager will be a web application for managing BattleTech campaigns and
+    RPG characters.
+  li
+    b How is it different than MegaMek, or MekHQ?
+  li.
+    MekManager actually draws heavily from MegaMek, but has a different direction and goals.
+    MekManager strives to use the most up to date rules for BattleTech, in hopes of making
+    BattleTech easier to get into for new players, and grow the community.
+  li
+    b How will MekManager work?
+  li.
+    Unlike MegaMek, MekManager does not run on your local machine, instead MekManager is a
+    hosted web application. This means that you will be able to use MekManager from any
+    device, and access your campaign.
+
 h4 Why MekManager?
 
 ul
@@ -40,3 +61,8 @@ ul
     would you like to? Even if you aren't technical at all, if you notice bad data, find a typo
     or speak a language other than English and would like to help with translation,
     everything helps.
+
+p.
+  Please note that MekManager is still in <b>very</b> early production, and will be for a
+  while. If you'd like to help with the project in any way, you can find a link to the
+  source code in the footer.
