--- a/assets/jade/home.jade
+++ b/assets/jade/home.jade
@@ -1,22 +1,27 @@
-ul
-  li
-    b What is MekManager?
-  li.
-    MekManager will be a web application for managing BattleTech campaigns and
-    RPG characters.
-  li
-    b How is it different than MegaMek, or MekHQ?
-  li.
-    MekManager actually draws heavily from MegaMek, but has a different direction and goals.
-    MekManager strives to use the most up to date rules for BattleTech, in hopes of making
-    BattleTech easier to get into for new players, and grow the community.
-  li
-    b How will MekManager work?
-  li.
-    Unlike MegaMek, MekManager does not run on your local machine, instead MekManager is a
-    hosted web application. This means that you will be able to use MekManager from any
-    device, and access your campaign.
-p.
-  Please note that MekManager is still in <b>very</b> early production, and will be for a
-  while. If you'd like to help with the project in any way, you can find a link to the
-  source code in the footer.
+p user name {{home.user.user_name}}
+p token {{home.user.token}}
+p logged in? {{home.logged_in}}
+
+div(class="panel panel-default")
+  div(class="panel-heading") Log in
+  div(class="panel-body")
+    form(class="form", id="signInForm")
+      h3(class="beta", ng-show="home.logged_in") Congratulations! You're a beta tester!
+      div(class="form-group", ng-show="!home.logged_in")
+        label(for="userName") User Name
+        input(class="form-control input-lg",
+              type="text",
+              placeholder="user name",
+              id="userName",
+              ng-model="home.form.user_name"
+        )
+      div(class="form-group", ng-show="!home.logged_in")
+        label(for="password") Password
+        input(class="form-control input-lg",
+              type="password",
+              placeholder="password",
+              id="password",
+              ng-model="home.form.password"
+        )
+        button(class="btn btn-success", ng-click="home.login()") Login
+        button(class="btn btn-success", ng-click="home.log()") Log
