--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -32,12 +32,16 @@ p
     margin: 0 auto
     text-align: center
 
+#signInForm
+  .btn
+    display: block
+    margin: 10px auto 0
+
 footer
   background: $footer_grey
-  padding-bottom: 10px
+  padding: 10px
   text-align: center
   color: $white
   p
-    padding-top: 10px
+    padding-top: 5px
 
-@import home
