--- a/index.jade
+++ b/index.jade
@@ -1,47 +1,34 @@
 doctype html
-html(ng-app="MekManager", lang="en")
+html(ng-app='MekManager', lang='en')
   head
     title MekManager
-    meta(charset="utf-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(name="description",
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='description',
       content="The unofficial campaign manager for BattleTech, a MechWarrior's best friend."
     )
-    meta(name="keywords",
-      content="BattleTech, MechWarrior, campaign, RPG, mek, board game, freebirth scum"
+    meta(name='keywords',
+      content='BattleTech, MechWarrior, campaign, RPG, mek, board game, freebirth scum'
     )
-    link(rel="stylesheet", href="vendor/css/vendor.min.css")
-    link(rel="stylesheet", href="assets/css/main.css")
+    link(rel='stylesheet', href='vendor/css/vendor.min.css')
+    link(rel='stylesheet', href='assets/css/main.css')
   body
     header.container
       h1
-        a(ng-href="#/") MekManager
+        a(ng-href='#/') MekManager
     main.container
       hr
-      // - Commented out for the holiday!
-      // - img(src="/assets/img/atlas_urbie.jpg", alt="Under construction",
-        class="splash")
-      // - h2 We're currently under construction, check back soon!
+      img(src='/assets/img/atlas_urbie.jpg', alt='Under construction',
+        class='splash')
+      h2(class='center') We're currently under construction, check back soon!
 
-      img(src="/assets/img/fathers_day.jpg", alt="Happy Father's Day Dad!",
-          class="fathers-day")
-
-      h2(class="center") Mekmanager is still under construction, but moving along!
-
-      p(class="center").
-        On account of Father's Day, I wanted to put up a special thank you to my Dad,
-        Glenn Hopkins. Many, many years ago he introduced me to BattleTech. This is
-        picture of us at GenCon in '07, here's to many more years of BattleTech!
+      p(class='center').
+        The MekManager website is entering a stage of very heavy development. Stay tuned for all
+        the updates coming in the future!
       br
 
       .content(ng-view)
 
-    footer
-      p MekManager is open source, you can view the source for this site&nbsp;
-        a(href="https://github.com/MekManager/mekmanager_client", target="_blank") here
-      p Read more about MekManager&nbsp;
-        a(ng-href="#/about") here
-      p Read our privacy policy&nbsp;
-        a(ng-href="#/privacy") here
-    script(src="/vendor/js/vendor.min.js")
-    script(src="/assets/js/app.min.js")
+    site-footer
+    script(src='/vendor/js/vendor.min.js')
+    script(src='/assets/src/app.min.js')
