--- a/assets/jade/home.jade
+++ b/assets/jade/home.jade
@@ -1,23 +1,15 @@
+splash
+
 div(class='panel panel-default')
   div(class='panel-heading') Log in
   div(class='panel-body')
     form(class='form', id='signInForm')
-      h4(ng-show='!home.logged_in') If you are a beta tester, login here.
-      h3(class='beta', ng-show='home.logged_in') Congratulations! You're a beta tester!
-      div(class='form-group', ng-show='!home.logged_in')
-        label(for='userName') User Name
-        input(class='form-control input-lg',
-              type='text',
-              placeholder='user name',
-              id='userName',
-              ng-model='home.form.user_name'
-        )
-      div(class='form-group', ng-show='!home.logged_in')
-        label(for='password') Password
-        input(class='form-control input-lg',
-              type='password',
-              placeholder='password',
-              id='password',
-              ng-model='home.form.password'
-        )
+      h4(ng-show='!home.loggedIn') If you are a beta tester, login here.
+      h3(class='beta', ng-show='home.loggedIn') Congratulations! You're a beta tester!
+      div(ng-show='!home.loggedIn')
+        form-name
+        form-password
         button(class='btn btn-success', ng-click='home.login()') Login
+
+div(ng-show='home.loggedIn')
+  unit-list(units='home.units')
