Put real links in to nav

--- a/assets/jade/directives/navBar.jade
+++ b/assets/jade/directives/navBar.jade
@@ -13,6 +13,16 @@ nav(class='navbar navbar-inverse')
     div(class='collapse navbar-collapse', id='navCollapse')
       ul(class='nav navbar-nav')
         li
-          a(ng-href='#/') Test link one
+          a(ng-href='#/') Objectives
         li
-          a(ng-href='#/') Test link two
+          a(ng-href='#/') Hangar
+        li
+          a(ng-href='#/') Barracks
+        li(class='dropdown')
+          a(class='dropdown-toggle', data-toggle='dropdown', role='button') Market
+            span(class='caret')
+          ul(class='dropdown-menu')
+            li
+              a(ng-href='#/') Pilots
+            li
+              a(ng-href='#/') Units
