Improvements to unit hangar
These improvements entail a wide range of new files
including some new language files. There are some
stubbed out image files for testing, a few updates
to the gulpfile as well in order to facilitate the
newest changes.

--- a/assets/jade/about.jade
+++ b/assets/jade/about.jade
@@ -1,3 +1,4 @@
+p {{ about.greeting() }}
 p.
   Hi, I'm <a target="_blank" href="https://in3d.github.io">Eric Hopkins</a>, and I've started the
   MekManager project. I've started it because more than any other reason, I really love BattleTech.
