--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -39,6 +39,16 @@ p
     display: block
     margin: 10px auto 0
 
+.unit
+  .progress
+    width: 25%
+
+#units
+    label
+      margin-right: 10px
+    input
+      margin-right: 10px
+
 nav
   // don't particularly like this
   margin-bottom: 0 !important
