--- a/index.jade
+++ b/index.jade
@@ -23,4 +23,4 @@ html(ng-app='MekManager', lang='en')
 
     site-footer
     script(src='/vendor/js/vendor.min.js')
-    script(src='/assets/src/app.min.js')
+    script(src='/assets/src/app.js')
