Improve selection highlighting in hangar
Meks are now highlighted with a bright green border around them.
It's just the default limegreen color. It would probably be
better to come up with a color that's more fitting with the sites
style, but it works for now. The display of the currently selected
mek is set to only display when a mek is selected (this is done to
avoid when the hanger is first visited, and angular's double curly
syntax shows up in the case of a null). New functions have been
defined in the hangarController to faciliate this.

--- a/assets/jade/hangar.jade
+++ b/assets/jade/hangar.jade
@@ -1,11 +1,11 @@
 div(id='units')
   div(class='well')
-    p Current: {{hangar.currentMechInfo()}}
+    p(ng-show='hangar.currentMechSet()') Current: {{hangar.currentMechId()}}
     button(class='btn btn-large btn-success' ng-click='hangar.repair()') Repair
     button(class='btn btn-large btn-danger' ng-click='hangar.sell()') Sell
 
   div(ng-repeat='u in hangar.units')
-    div(class='panel panel-default')
+    div(class='panel panel-default' ng-class='u.status')
       div(class='panel-body')
         div(class='media')
           div(class='media-left')
