--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -44,10 +44,13 @@ p
     width: 25%
 
 #units
-    label
-      margin-right: 10px
-    input
-      margin-right: 10px
+  .panel
+    &.active
+      border: 2px solid limegreen
+  label
+    margin-right: 10px
+  input
+    margin-right: 10px
 
 nav
   // don't particularly like this
